iac/roots/kubernetes-services/argo/kustomize/base/traefik-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-server
  namespace: argo
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argo.home.lan`)
      priority: 10
      services:
        - name: argo-server
          port: 2746
    # - kind: Rule
    #   match: Host(`argo.home.lan`) && Headers(`Content-Type`, `application/grpc`)
    #   priority: 11
    #   services:
    #     - name: argo-server
    #       port: 80
    #       scheme: h2c
  # tls:
  #   certResolver: default
